Fix(Warning Label): FIxes warning label to properly be shown on mobile.

--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -107,3 +107,10 @@ nav ul {
 	left: 0%;
 }
 
+@media screen and (max-width: 900px) {
+	.warning {
+		font-size: 0.8rem;
+		padding: 0.5rem;
+	}
+}
+
